# Concept

./: .gitignore  .gitmodules  build.sh  klaara  note_folder_classes.cpp  teditor.c
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: ConceptApp.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_ConceptApp.rsp
.rcc/: ConceptApp_raw_qml_0.qrc  configuration.qrc  qmake_Main.qrc
Concept/: CMakeLists.txt  Concept.qmlproject  main.qml  qmlmodules
Concept/content/: CMakeLists.txt  Screen01.ui.qml  titlebar.qmodel
Concept/imports/Concept/: CEditor.qml  CMakeLists.txt  CSidebar.qml
Concept/includes/: SearchReplace.h  ToolBox.h  app_environment.h  calc.h  calendar.h  cppPomodoro.h  editor.h  errors.h  explorer.h  export.h  filesystemmodel.h  fontSize.h  import_qml_plugins.h  linenumbermodel.h  mainhelp.h  precompiled.h  setFocusPeriod.h  startTimer.h  studytimer.h  timer.h  timerUI.h  todoItem.h  todoList.h
Concept/includes/database/: calendarEvents.h  database.h  focus_time.h  folders.h  notes.h  timerElements.h
Concept/qml/: About.qml  CEditor.qml  CMakeLists.txt  CMenu.qml  CMenuBar.qml  CSidebar.qml  CTimer.qml  Colors.qml  Constants.qml  DirectoryFontLoader.qml  EventListSimulator.qml  Explorer.qml  FileSystemView.qml  Pomodoro.qml  ResizeButton.qml  ToDoList.qml  qmldir
Concept/src/: SearchReplace.cpp  ToolBox.cpp  calc.cpp  calendar.cpp  cppPomodoro.cpp  editor.cpp  errors.cpp  explorer.cpp  filesystemmodel.cpp  fontSize.cpp  linenumbermodel.cpp  main.cpp  mainhelp.cpp  mainhelp.h  setFocusPeriod.cpp  setFocusPeriod.h  startTimer.cpp  studytimer.cpp  textedit.cpp  textedit.h  texteditor.cpp  texteditor.hpp  textview.cpp  textview.h  timer.cpp  timerUI.cpp  todoItem.cpp  todoList.cpp
Concept/src/database/: calendarEvents.cpp  focus_time.cpp  folders.cpp  notes.cpp  timerElements.cpp
Reporting/: Alexandre_Bismuth.md  Hung_Weekly_Update.md  Klaara_weekly_reports.md  Marta_Trales_Reports.md  Maxime Weekly Update.md  Milana_Komisarova_weekly_report.md  NguyenVuWeeklyUpdate.md  Octave Berbigier.md  Raluca_Panainte_Reports.md  andreea_patarlageanu-w1.md  bruno-weekly-update.md  peter_week1_update  peter_week1_update.md
Texteditor/QT_te/: CMakeLists.txt  main.cpp  texteditor.hpp
content/.rcc/: content_raw_qml_0.qrc  qmake_content.qrc
content/qmltypes/: content_foreign_types.txt
qml/: Conceptplugin_ConceptPlugin.cpp  Conceptplugin_init.cpp
qml/.rcc/: Concept_raw_qml_0.qrc  qmake_Concept.qrc
qml/.rcc/qmlcache/: Concept_qml_loader_file_list.rsp
qml/Concept/: Colors.qml  Concept_qml_module_dir_map.qrc  DirectoryFontLoader.qml  FileSystemView.qml  Pomodoro.qml  qmldir
qml/FlowView/: FlowView_qml_module_dir_map.qrc
qml/Main/: ConceptApp_qml_module_dir_map.qrc  qmldir
qml/QtQuick/Studio/Application/: QuickStudioApplication_qml_module_dir_map.qrc
qml/QtQuick/Studio/Components/: QuickStudioComponents_qml_module_dir_map.qrc
qml/QtQuick/Studio/Effects/: QuickStudioEffects_qml_module_dir_map.qrc
qml/QtQuick/Studio/EventSimulator/: QuickStudioEventSimulator_qml_module_dir_map.qrc
qml/QtQuick/Studio/EventSystem/: QuickStudioEventSystem_qml_module_dir_map.qrc
qml/QtQuick/Studio/LogicHelper/: QuickStudioLogicHelper_qml_module_dir_map.qrc
qml/QtQuick/Studio/MultiText/: QuickStudioMultiText_qml_module_dir_map.qrc
qml/content/: content_qml_module_dir_map.qrc
qmltypes/: ConceptApp_foreign_types.txt
title_bar/: mainwindow.ui
